--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".PhotoActivity"
+			android:configChanges="orientation|keyboardHidden|screenSize"
+			>
+		</activity>
 	</application>
 
 </manifest>
