--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ repositories {
 dependencies {
 	compile 'com.android.support:appcompat-v7:25.0.+'
 	compile 'poisondog:poisondog.commons:3.6.5'
-	compile 'poisondog:poisondog.android.util:0.0.1@aar'
+	compile 'poisondog:poisondog.android.util:0.0.6@aar'
+	compile 'poisondog:poisondog.android.pager:0.0.1@aar'
 	testCompile 'junit:junit:4.11'
 }
 
