--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-project.group = 'poisondog'
+//project.group = 'poisondog'
+project.group = 'com.walton.cob'
 project.version = '1.2.15'
 
 buildscript {
@@ -51,3 +52,4 @@ dependencies {
 }
 
 apply from: 'https://raw.githubusercontent.com/poisondog/gradle.tool/master/android/bintray.gradle'
+apply from: 'https://raw.githubusercontent.com/poisondog/gradle.tool/master/android/uploadNexus.gradle'
